Reply to comments. Fixing excess white space, clearing multiple line of font size, explaining why the name of the old site owner exists.

--- a/src/pages/InfoPages/Atervinningscentral.css
+++ b/src/pages/InfoPages/Atervinningscentral.css
@@ -9,6 +9,7 @@ section h1 {
     rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
+
 .recycling-info {
   font-size: 0.85rem;
   background-color: #e3c148;
@@ -47,7 +48,6 @@ section h1 {
   box-shadow: 0px 4px 6px -1px rgba(0, 0, 0, 0.1),
     0px 2px 4px -1px rgba(0, 0, 0, 0.06);
   padding: 1.5rem;
-  font-size: 0.9rem;
   line-height: 1.6;
 }
 
@@ -194,6 +194,7 @@ section h1 {
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
   transition: background-color 0.3s, transform 0.3s;
 }
+
 .recycling-services-description-btn:hover {
   background-color: #d4b036;
   transform: scale(1.05);
